@@ -217,11 +217,12 @@ extern bool preemption_enabled(void)
 extern bool job_preempt_check(job_queue_rec_t *preemptor,
 			      job_queue_rec_t *preemptee)
 {
-	if (preemptor->part_ptr && preemptee->part_ptr) {
-		if (preemptor->part_ptr->priority_tier >
-		    preemptee->part_ptr->priority_tier)
+	if (preemptor->part_ptr && preemptee->part_ptr &&
+	    (bit_overlap(preemptor->part_ptr->node_bitmap,
+			 preemptee->part_ptr->node_bitmap)) &&
+	    (preemptor->part_ptr->priority_tier >
+	     preemptee->part_ptr->priority_tier))
 			return true;
-	}
 
 	return false;
 }
