@@ -45,6 +45,8 @@ documents those changes that are of interest to users and administrators.
     --nodelist options.
  -- Fix main scheduler from potentially not running through whole queue.
  -- Fix variable initiation to avoid slurmctld abort.
+ -- In partition preemption, sort preemptor jobs only if they overlap a
+    preemtable partition.
 
 * Changes in Slurm 19.05.0rc1
 =============================
